link to support on error pages

--- a/public/404.html
+++ b/public/404.html
@@ -34,7 +34,7 @@
       <h1>404</h1>
       <p>A página que você está procurando não foi encontrada.</p>
     </div>
-    <p>Caso você acha que isto está errado, entre em contato com nosso suporte clicando <a href="#">aqui</a>.</p>
+    <p>Caso você acha que isto está errado, entre em contato com nosso suporte clicando <a href="https://api.whatsapp.com/send?phone=5581998590619&text=Ol%C3%A1%2C%20eu%20encontrei%20um%20poss%C3%ADvel%20problema%20na%20plataforma%20do%20Multin%C3%ADvel%20da%20Moda">aqui</a>.</p>
   </div>
 </body>
 </html>
