--- a/public/500.html
+++ b/public/500.html
@@ -34,7 +34,7 @@
       <h1>500</h1>
       <p>Parece que fizemos algo de errado. Desculpe o transtorno...</p>
     </div>
-    <p>Entre em contato com nosso suporte clicando <a href="#">aqui</a>.</p>
+    <p>Entre em contato com nosso suporte clicando <a href="https://api.whatsapp.com/send?phone=5581998590619&text=Ol%C3%A1%2C%20eu%20encontrei%20um%20poss%C3%ADvel%20problema%20na%20plataforma%20do%20Multin%C3%ADvel%20da%20Moda">aqui</a>.</p>
   </div>
 </body>
 </html>
