error pages updated

--- a/public/500.html
+++ b/public/500.html
@@ -27,7 +27,7 @@
 </head>
 
 <body>
-  <img src="/assets/images/logo-horizontal.png" alt="" class="main-logo">
+  <img src="logo-vertical.png" alt="" class="main-logo">
   <div class="dialog">
 
     <div>
